objects/ContractAttachment__c.object
<CustomObject>
    <description>SFDC1-662 Object to define what kind of attachment users are adding to a Contract</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>SFDC1-662 Name of Account with which this contract attachment is associated</description>
        <formula>Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read only field which gives name of Account with which this contract attachment is associated</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentType__c</fullName>
        <description>SFDC1-662 to define what kind of attachment users are adding to a Contract
SFDC1-7080: Updating Attachment Type picklist field on the Contract Attachments object,</description>
        <inlineHelpText>Please select the kind of attachment you are adding to a Contract</inlineHelpText>
        <label>Attachment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Certificate of Purge</fullName>
                </value>
                <value>
                    <fullName>Client Signed Contract</fullName>
                </value>
                <value>
                    <fullName>Client Usage Reports</fullName>
                </value>
                <value>
                    <fullName>Continuation Letter</fullName>
                </value>
                <value>
                    <fullName>Contribution Addendum</fullName>
                </value>
                <value>
                    <fullName>Contribution Schedule</fullName>
                </value>
                <value>
                    <fullName>Countersigned Contract</fullName>
                </value>
                <value>
                    <fullName>Escrow Agreement</fullName>
                </value>
                <value>
                    <fullName>Fee Waiver</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>MarkitSERV Amended Annex Form</fullName>
                </value>
                <value>
                    <fullName>MarkitSERV Fee Letter</fullName>
                </value>
                <value>
                    <fullName>MarkitSERV Super Access Coordinators Form</fullName>
                </value>
                <value>
                    <fullName>MarkitSERV Supplemental Agreement Form</fullName>
                </value>
                <value>
                    <fullName>MarkitSERV User/Broker Terms</fullName>
                </value>
                <value>
                    <fullName>MarkitSERV User Agreement / Key Contacts</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Notice of Non-Renewal</fullName>
                </value>
                <value>
                    <fullName>Novation Letter</fullName>
                </value>
                <value>
                    <fullName>Online Agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price Increase Letter</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Renewal Notice</fullName>
                </value>
                <value>
                    <fullName>Sales RAD Approval Form</fullName>
                </value>
                <value>
                    <fullName>Signed Continuation Letter</fullName>
                </value>
                <value>
                    <fullName>Signed Master Agreement</fullName>
                </value>
                <value>
                    <fullName>Signed NDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-662 Contract attachment comments</description>
        <inlineHelpText>Please add any comments related to this contact attachment</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>SFDC1-662- End date of the Contract to which this contact attachment is associated</description>
        <formula>Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field: End date of the Contract to which this contact attachment is associated</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>SFDC1-662- Start date of the Contract to which this contact attachment is associated</description>
        <formula>Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Read-only field: Start date of the Contract to which this contact attachment is associated</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>SFDC1-662 Contract to which this contract attachment is associated</description>
        <inlineHelpText>Please select the contract to which this contract attachment is associated</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Attachments</relationshipLabel>
        <relationshipName>ContractAttachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CurrentPO__c</fullName>
        <description>SFDC-2530-This represents the Contract Attachment (Type=PO) which is valid under a contract for the current period.</description>
        <inlineHelpText>This represents the Contract Attachment(PO) which is valid under a contract for the current period.</inlineHelpText>
        <label>Current PO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocuSignEnvelopeId__c</fullName>
        <description>SFDC1-662 DocuSign envelope ID if the contract  attachment is of DocuSign type</description>
        <externalId>true</externalId>
        <inlineHelpText>System managed: DocuSign envelope ID if the contract  attachment is of DocuSign type</inlineHelpText>
        <label>DocuSign Envelope Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDocuSignCert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-662: Checked if contract attachment is a DocuSign certificate</description>
        <inlineHelpText>System Managed: Checked  if contract attachment is a DocuSign certificate</inlineHelpText>
        <label>IsDocuSignCert?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7594 This is a concatenation of the System and ID to ensure the number is unique, this field should be a unique external ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a concatenation of the System and ID to ensure the number is unique, this field should be a unique external ID.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7594 Record IDs from the legacy system Contract attachments, NOT unique</description>
        <externalId>true</externalId>
        <inlineHelpText>Record IDs from the legacy system Contract attachments</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7594 This is a friendly system reference to the source</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7594 This uses the Legacy System global picklist value set defined in SFDC1-6978</description>
        <inlineHelpText>Legacy System where this record was imported from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppyOwnerEmail__c</fullName>
        <description>SFDC-2530 Used in workflow email alert</description>
        <label>Oppy Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>POAttached__c</fullName>
        <description>SFDC-2530- This indicates if a file has been attached under the Contract Attachment record</description>
        <inlineHelpText>This indicates if a file has been attached under the Contract Attachment record</inlineHelpText>
        <label>PO Attached</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenewalOwnerEmail__c</fullName>
        <description>SFDC-2530 Used in workflow email alert</description>
        <label>Renewal Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TotalFilesAttached__c</fullName>
        <description>SFDC-4182 Count total files attached under each Contract Attachment Record</description>
        <label>Total Files Attached</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Attachment</label>
    <nameField>
        <label>Contract Attachment Name (Client-Prod)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Attachment</pluralLabel>
    <recordTypes>
        <fullName>Consulting</fullName>
        <active>true</active>
        <description>SFDC1-9507 : Created new RecordType for Consulting RecordType</description>
        <label>Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>ContinuationLetter</fullName>
        <active>true</active>
        <label>Continuation Letter</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPA</fullName>
        <active>true</active>
        <description>SFDC-2958 DPA Record Type</description>
        <label>DPA</label>
    </recordTypes>
    <recordTypes>
        <fullName>GeneralAgreement</fullName>
        <active>true</active>
        <label>Master Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>ManagedServiceTermsMST</fullName>
        <active>true</active>
        <description>SFDC-2958 MST Record Type</description>
        <label>Managed Service Terms (MST)</label>
    </recordTypes>
    <recordTypes>
        <fullName>MasterAgreementExhibit</fullName>
        <active>true</active>
        <description>SFDC-865 new record type for exhibits related to Master Agreement</description>
        <label>Master Agreement Exhibit</label>
    </recordTypes>
    <recordTypes>
        <fullName>NDA</fullName>
        <active>true</active>
        <label>NDA</label>
    </recordTypes>
    <recordTypes>
        <fullName>OrderForm</fullName>
        <active>true</active>
        <label>Order Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>ThirdPartyProcessorAgreement</fullName>
        <active>true</active>
        <description>SFDC - 1087 - Third Party Processor Agreement</description>
        <label>Third Party Processor Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trial</fullName>
        <active>true</active>
        <label>Trial</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RestrictAttachmentCreateEditforProfiles</fullName>
        <active>true</active>
        <description>SFDC1-4739 : Restrict some Profiles from Attachment creation and edit</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ContractAttachment__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND( 
OR( 
ISNEW(), 
ISCHANGED(AccountName__c), 
ISCHANGED(AttachmentType__c), 
ISCHANGED(Comments__c), 
ISCHANGED(Contract__c), 
ISCHANGED(ContractEndDate__c), 
ISCHANGED(ContractStartDate__c), 
ISCHANGED(DocuSignEnvelopeId__c), 
ISCHANGED(IsDocuSignCert__c), 
ISCHANGED(Name)
), 
OR( 
CONTAINS($Profile.Name, &apos;Read Only Profile&apos;), 
CONTAINS($Profile.Name, &apos;Data Governance&apos;), 
CONTAINS($Profile.Name, &apos;Product Manager&apos;), 
CONTAINS($Profile.Name, &apos;Marketing&apos;),
CONTAINS($Profile.Name, &apos;Read Only Activity User&apos;) 
) 
)
)</errorConditionFormula>
        <errorMessage>You are not authorized to add Attachments.</errorMessage>
    </validationRules>
</CustomObject>